genesis/orchestrator/manifests/elohim-storybook/alpha/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: elohim-storybook-alpha-service
  namespace: elohim-alpha
  labels:
    app.kubernetes.io/name: elohim-storybook
    app.kubernetes.io/instance: elohim-storybook-alpha
    app.kubernetes.io/component: design-surface
    app.kubernetes.io/part-of: elohim
    app.kubernetes.io/managed-by: jenkins
spec:
  selector:
    app: elohim-storybook-alpha
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
