genesis/orchestrator/manifests/elohim-storybook/alpha/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: elohim-storybook-alpha-ingress
  namespace: ethosengine
  labels:
    app.kubernetes.io/name: elohim-storybook
    app.kubernetes.io/instance: elohim-storybook-alpha
    app.kubernetes.io/component: design-surface
    app.kubernetes.io/part-of: elohim
    app.kubernetes.io/managed-by: jenkins
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  ingressClassName: public
  rules:
  - host: storybook.elohim.host
    http:
      paths:
      - backend:
          service:
            name: elohim-storybook-alpha-service
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - storybook.elohim.host
    secretName: alpha-elohim-storybook-tls-cert
